# monitor-monitor

./: .gitignore  LICENSE  README.md  monitor_monitor.spec  pyproject.toml  requirements.txt  version_info.txt
scripts/: build.py  generate_icon.py
src/monitor_monitor/: __init__.py  __main__.py  app.py  constants.py  detector.py  display.py  test_code.py  tray.py
src/monitor_monitor/assets/: __init__.py  theme.json
