[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor-monitor"
version = "0.1.0"
description = "A Windows system tray utility that auto-applies your preferred display mode when monitors change."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Mika Pitkala" }
]
requires-python = ">=3.10"
keywords = ["windows", "display", "monitor", "tray", "utility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "customtkinter>=5.2.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "pywin32>=306",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "ruff>=0.1.0",
]

[project.scripts]
monitor-monitor = "monitor_monitor.__main__:main"

[project.urls]
Homepage = "https://github.com/mikapitkala/monitor-monitor"
Issues = "https://github.com/mikapitkala/monitor-monitor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
monitor_monitor = ["assets/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]